<resources>
    <string name="app_name">TickTock</string>

    <!-- item_sub_path -->
    <string name="path_tv_total_time_ex">34분</string>
    <string name="path_tv_total_time_minute">%1$d분</string>
    <string name="path_tv_total_time">%1$d시간 %2$d분</string>
    <string name="path_tv_total_walk_ex">도보 15분</string>
    <string name="path_tv_total_walk">도보 %1$d분</string>
    <string name="path_tv_divide">&#160;|&#160;</string>
    <string name="path_tv_payment_ex">6,250원</string>
    <string name="path_tv_payment">%1$s원</string>
    <string name="path_tv_bus_no_ex">740</string>
    <string name="path_tv_bus_no">%1$d</string>
    <string name="path_tv_get_on_ex">합정역 승차</string>
    <string name="path_tv_get_on">%1$s 승차</string>
    <string name="path_tv_transfer">%1$s 환승</string>
    <string name="path_tv_get_off_ex">시청역 환승 > 종각역 하차</string>
    <string name="path_tv_get_off">%1$s 하차</string>
    <string name="path_tv_next">&#160;>&#160;</string>

    <!-- activity_setting_first -->
    <string name="setting_1_tv_subtitle">시간 정하기</string>
    <string name="setting_1_tv_title">약속이\n<b>언제 몇 시</b> 였지?</string>
    <string name="setting_1_tv_days">요일</string>
    <string name="setting_1_tv_fix_every_week">매주 고정</string>
    <string name="setting_1_tv_monday">월</string>
    <string name="setting_1_tv_tuesday">화</string>
    <string name="setting_1_tv_wednesday">수</string>
    <string name="setting_1_tv_thursday">목</string>
    <string name="setting_1_tv_friday">금</string>
    <string name="setting_1_tv_saturday">토</string>
    <string name="setting_1_tv_sunday">일</string>
    <string name="setting_1_tv_time">시간</string>
    <string name="setting_1_tv_divide">:</string>
    <string name="setting_1_tv_pm">PM</string>
    <string name="setting_1_tv_am">AM</string>
    <string name="setting_1_tv_next_step">다음 단계</string>

    <!-- activity_main -->
    <string name="main_tv_title"><b>새로운 약속 카드</b>를\n<b>생성</b>해주세요</string>
    <string name="main_tv_registered_appointment">등록된 약속 %1$d</string>
    <string name="main_tv_none">등록된 약속이 없어요</string>
</resources>
