<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.main.MainActivity">

    <data>
        <import type="com.km.ticktock.views.alarmsetting.entity.DayType" />
        <variable
            name="vm"
            type="com.km.ticktock.views.main.MainViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="54dp"
                    android:background="@color/bg_gray"
                    android:adjustViewBounds="true"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/iv_course"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="18dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ico_course"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintEnd_toStartOf="@+id/iv_setting"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ico_main_setting"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_course"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@null"
                        android:src="@drawable/img_logo"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_course" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="19dp"
                        android:text="@string/main_tv_title"
                        android:textColor="@color/text_black"
                        android:textSize="24sp"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintBottom_toTopOf="@+id/btn_monday"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

                    <Button
                        android:id="@+id/btn_monday"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="42dp"
                        android:layout_marginTop="14dp"
                        android:background="@drawable/selector_btn_day"
                        android:text="@string/setting_1_tv_monday"
                        android:textColor="@color/selector_btn"
                        android:textSize="14sp"
                        android:onClick="@{() -> vm.onDayClick(DayType.MONDAY)}"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_tuesday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                    <Button
                        android:id="@+id/btn_tuesday"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/selector_btn_day"
                        android:text="@string/setting_1_tv_tuesday"
                        android:textColor="@color/selector_btn"
                        android:textSize="14sp"
                        android:onClick="@{() -> vm.onDayClick(DayType.TUESDAY)}"
                        app:layout_constraintEnd_toStartOf="@+id/btn_wednesday"
                        app:layout_constraintStart_toEndOf="@+id/btn_monday"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                    <Button
                        android:id="@+id/btn_wednesday"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/selector_btn_day"
                        android:text="@string/setting_1_tv_wednesday"
                        android:textColor="@color/selector_btn"
                        android:textSize="14sp"
                        android:onClick="@{() -> vm.onDayClick(DayType.WEDNESDAY)}"
                        app:layout_constraintEnd_toStartOf="@+id/btn_thursday"
                        app:layout_constraintStart_toEndOf="@+id/btn_tuesday"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                    <Button
                        android:id="@+id/btn_thursday"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/selector_btn_day"
                        android:text="@string/setting_1_tv_thursday"
                        android:textColor="@color/selector_btn"
                        android:textSize="14sp"
                        android:onClick="@{() -> vm.onDayClick(DayType.THURSDAY)}"
                        app:layout_constraintEnd_toStartOf="@+id/btn_friday"
                        app:layout_constraintStart_toEndOf="@+id/btn_wednesday"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                    <Button
                        android:id="@+id/btn_friday"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/selector_btn_day"
                        android:text="@string/setting_1_tv_friday"
                        android:textColor="@color/selector_btn"
                        android:textSize="14sp"
                        android:onClick="@{() -> vm.onDayClick(DayType.FRIDAY)}"
                        app:layout_constraintEnd_toStartOf="@+id/btn_saturday"
                        app:layout_constraintStart_toEndOf="@+id/btn_thursday"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                    <Button
                        android:id="@+id/btn_saturday"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/selector_btn_day"
                        android:text="@string/setting_1_tv_saturday"
                        android:textColor="@color/selector_btn"
                        android:textSize="14sp"
                        android:onClick="@{() -> vm.onDayClick(DayType.SATURDAY)}"
                        app:layout_constraintEnd_toStartOf="@+id/btn_sunday"
                        app:layout_constraintStart_toEndOf="@+id/btn_friday"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                    <Button
                        android:id="@+id/btn_sunday"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="42dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/selector_btn_day"
                        android:text="@string/setting_1_tv_sunday"
                        android:textColor="@color/selector_btn"
                        android:textSize="14sp"
                        android:onClick="@{() -> vm.onDayClick(DayType.SUNDAY)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btn_saturday"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/tv_registered_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp"
                app:registered_appointment="@{10}"
                android:textColor="@color/text_brown_gray"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toTopOf="@+id/rcv_appointment"
                app:layout_constraintEnd_toStartOf="@+id/iv_create"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:layout_marginTop="14dp"
                android:contentDescription="@null"
                android:src="@drawable/btn_create"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_registered_appointment"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tv_none"
                android:textColor="@color/text_gray"
                android:textSize="28sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_registered_appointment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_appointment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="21dp"
                android:fitsSystemWindows="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_registered_appointment" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>